Fixed another missing lq in application layout view.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 	  <ul>
 	    <li><%= link_to "Home", '#' %></li>
 	    <li><%= link_to "Help", '#' %></li>
-	    <li><%= link_to "Sign in", '# %></li>
+	    <li><%= link_to "Sign in", '#' %></li>
 	  </ul>
 	</nav>
       </header>
