Added partials for stylesheets, headers, and footers. Updated custom.css accordingly.

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -21,6 +21,18 @@ section {
     background: #fff;
 }
 
+footer {
+    text-align: center;
+    margin-top: 10px;
+    width: 710px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+footer nav {
+    float: none;
+}
+
 /* Links */
 
 a {
@@ -95,3 +107,4 @@ a.signup_button {
     -webkit-border-radius: 10px;
     border-radius:         10px;
 }
+
