--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,3 +1,6 @@
+<% content_for :head do %>
+  <%= javascript_include_tag "text_counter" %>
+<% end %>
 <%= form_for @micropost do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
   <div class="field">
